# OSLab

./: .gitignore  GPU.sh  GitPull.bat  GitPush.bat  README.md  git_help.bat  gitpull.sh
Lab1/: note.txt  runqemu.sh  vmlinux.txt
Lab1/Test/: test.py
Lab2/: QA.md
Lab2/Shell_part/: systemcall_explain.md  test.md
Lab2/Shell_part/Code/: 2024_lab2_shellwithTODO.c  Makefile  simple_shell  testdata  testsh  testsh.c
Lab2/Shell_part/FAQ/: Lab2.md
Lab2/Shell_part/Test/: test_atoi.c
Lab2/SysCall_part/: auto.sh  auto_compile.sh  auto_copycode.sh  auto_resetcode.sh  flab2  flab2.c  my_get_p_c  my_get_p_c.c  open.sh
Lab2/SysCall_part/tmp/: my_get_p_c.c  sys.c  syscall_64.tbl  syscalls.h
Lab2/SysCall_part/tmp/myconfig/: oslab2.h
Lab3/Final/: memlib.c  mm.c
Lab3/malloclab/: memlib.c  mm.c  test.sh
Lab3/report/: lab3.md
Lab3/trace/: test  test.cc  test.sh  workload  workload.cc
Lab4/: auto.sh
Lab4/Final/sample/simpleshell/: BUILD.gn
Lab4/Final/sample/simpleshell/include/: simpleshell.h
Lab4/ID_part/: auto.bat  stu_id.c  stuid
Lab4/SubSystem_part/sample/simpleshell/: bundle.json  simpleshell.c
Lab4/SubSystem_part/sample/simpleshell/src/: simpleshell.c
Lab4/report/: 4.md
Lab5/: note.md
Lab5/Code/: Makefile  autotest.sh  simple_fat16.c
Lab5/report/: 5.md
test/: a.out  test_pthread.c
